tests/langs/snapshots/r#mod__langs__base.cpp_enum.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 49
  l: "enum class Color { Red, Green, Blue };\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   "
