tests/langs/snapshots/r#mod__langs__base.cpp_for.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 101
  l: "    for (int i = 0; i < 5; ++i) {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 102
  l: "        std::cout << i << \" \";\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 103
  l: "    }\n"
  m: "^^^^^  "
