tests/langs/snapshots/r#mod__langs__base.cpp_if.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 74
  l: "    if (it != vec.end()) {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 75
  l: "        return *it;\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
- n: 76
  l: "    }\n"
  m: "^^^^^  "
- n: 81
  l: "    if (flag) {\n"
  m: "    ^^^^^^^^^^^^^"
- n: 82
  l: "        return 42;\n"
  m: ^^^^^^^^^^^^^^^^^^^^
- n: 83
  l: "    }\n"
  m: "^^^^^  "
- n: 93
  l: "    if (a > 0) {\n"
  m: "    ^^^^^^^^^^^^^^"
- n: 94
  l: "        std::cout << \"Positive\\n\";\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 95
  l: "    } else if (a < 0) {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 96
  l: "        std::cout << \"Negative\\n\";\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 97
  l: "    } else {\n"
  m: ^^^^^^^^^^^^^^
- n: 98
  l: "        std::cout << \"Zero\\n\";\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 99
  l: "    }\n"
  m: "^^^^^  "
- n: 134
  l: "    if (value) {\n"
  m: "    ^^^^^^^^^^^^^^"
- n: 135
  l: "        std::cout << \"Found: \" << *value << \"\\n\";\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 136
  l: "    }\n"
  m: "^^^^^  "
- n: 139
  l: "    if (std::holds_alternative<int>(variantValue)) {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 140
  l: "        std::cout << \"Variant holds int: \" << std::get<int>(variantValue) << \"\\n\";\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 141
  l: "    }\n"
  m: "^^^^^  "
