tests/langs/snapshots/r#mod__langs__base.cpp_lambda.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 70
  l: "auto lambda = [](int a, int b) { return a + b; };\n"
  m: "              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^   "
